--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/HabipSanli/rabbitmq#readme",
   "dependencies": {
-    "amqplib": "^0.10.0"
+    "@types/express": "^4.17.13",
+    "amqplib": "^0.10.0",
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
